src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__snapshot_deep_nesting.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Deep Profile ────────────────────────────────────────────┐
│ main()███████████████████████████████████████████████████│
│ a()██████████████████████████████████████████            │
│ b()██████████████████████████████                        │
│ c()███████████████████                                   │
│ d()███████                                               │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ Selected: main()  1000 samples (100.0%)  self: 200       │
└──────────────────────────────────────────────────────────┘
