src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__snapshot_empty.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                         No data                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
