src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__snapshot_focused_with_selection.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Flame Graph ─────────────────────────────────────────────┐
│ main()███████████████████████████████████████████████████│
│ compute()████████████████████████ io()██████             │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ Selected: compute()  300 samples (60.0%)  self: 300      │
└──────────────────────────────────────────────────────────┘
