src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__snapshot_simple_tree.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Flame Graph ─────────────────────────────────────────────┐
│ main()███████████████████████████████████████████████████│
│ compute()████████████████████████ io()██████             │
│ sort()██████████ hash()████                              │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ Selected: main()  500 samples (100.0%)  self: 100        │
└──────────────────────────────────────────────────────────┘
