src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__snapshot_zoomed.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Flame Graph ─────────────────────────────────────────────┐
│ compute()████████████████████████████████████████████████│
│ sort()██████████████████████ hash()████████████          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ Selected: compute()  300 samples (100.0%)  self: 50      │
└──────────────────────────────────────────────────────────┘
