src/component/flame_graph/snapshots/envision__component__flame_graph__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/flame_graph/snapshot_tests.rs
expression: terminal.backend().to_string()
---
 main()█████████████████████████████████
                                        
                                        
                                        
                                        
                                        
────────────────────────────────────────
 Selected: main()  500 samples (100.0%)
